# backuptool

./: Cargo.toml  README.md
examples/simple/duplicates/: level2.info
examples/simple/level1/: level1_1.txt  level1_2.txt
src/: README.txt  TODO.txt  archive_format.txt  checksum.rs  dirwalk.rs  main.rs  meta_format.rs  misc_helper.rs
src/archive/: channel_reader.rs  channel_writer.rs  content.rs  defs.rs  mod.rs  session.rs
src/test/: mod.rs
