[package]
name = "backuptool"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sha2 = "0.10"
digest = "0.10.7"
chrono = "0.4"
chrono-tz = "0.1"
anyhow = "1.0"
indoc = "2"
scopeguard = "1.2"
itertools = "0.14"
hex = "0.4"
crossbeam = "0.8.4"
clap = { version = "4.5.28", features = ["derive"] }
bzip2 = { version = "0.5.1", default-features = false, features = ["libbz2-rs-sys"] }
rand = "0.9"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
assert_cmd = "2"
dir-diff = "0.3"
tempdir = "0.3"
rust-embed = "8"